--- a/TrustPic/TrustPic/Info.plist
+++ b/TrustPic/TrustPic/Info.plist
@@ -68,5 +68,7 @@
         <key>NSAllowsArbitraryLoads</key>
         <true/>
     </dict>
+    <key>NSPhotoLibraryUsageDescription</key>
+    <string>This app requires access to the photo library.</string>
 </dict>
 </plist>
