--- a/TrustPic/Podfile
+++ b/TrustPic/Podfile
@@ -5,4 +5,5 @@ target 'TrustPic' do
   # Comment the next line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
     pod 'Just'
+    pod 'SwiftVideoBackground'
 end
